kustomize/overlays/production/search/simple-dictionaries/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-dictionaries
  labels:
    app: simple-dictionaries
    stage: production
  annotations:
    kube-score/ignore: pod-probes
spec:
  selector:
    matchLabels:
      app: simple-dictionaries
      stage: production
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 10%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: simple-dictionaries
        stage: production
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::567351176096:role/pixtavietnam-production
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: eks.amazonaws.com/capacityType
                    operator: In
                    values:
                      - ON_DEMAND
              weight: 10
      containers:
        - name: simple-dictionaries-nginx
          resources:
            limits:
              memory: 70Mi
            requests:
              cpu: 5m
              memory: 35Mi
