kustomize/overlays/production/search/simple-dictionaries/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-dictionaries-svc
spec:
  selector:
    app: simple-dictionaries
    stage: production
